<resources>
    <string name="app_name">PMDM04EjercicioInmobiliariaEduSolution</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="direccion">Dirección</string>
    <string name="numero">Nº</string>
    <string name="cp">C.P</string>
    <string name="ciudad">Ciudad</string>
    <string name="provincia">Provincia</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Crear</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="actualizar">Actualizar</string>
</resources>